--- a/zeos/Makefile
+++ b/zeos/Makefile
@@ -31,7 +31,7 @@ SYSOBJ = interrupt.o entry.o sys_call_table.o io.o sched.o sys.o mm.o devices.o 
 LIBZEOS = -L . -l zeos -l auxjp
 
 #add to USROBJ the object files required to complete the user program
-USROBJ = libc.o user-utils.o screen.o# libjp.a
+USROBJ = libc.o user-utils.o # libjp.a
 
 all:zeos.bin
 
@@ -67,8 +67,6 @@ sys_call_table.s: sys_call_table.S $(INCLUDEDIR)/asm.h $(INCLUDEDIR)/segment.h
 user.o:user.c $(INCLUDEDIR)/libc.h
 
 interrupt.o:interrupt.c $(INCLUDEDIR)/interrupt.h $(INCLUDEDIR)/segment.h $(INCLUDEDIR)/types.h
-
-screen.o:screen.c $(INCLUDEDIR)/screen.h $(INCLUDEDIR)
 
 
 io.o:io.c $(INCLUDEDIR)/io.h
